--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -14,3 +14,5 @@
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.from=admin@example.com
+
+#parks-api-key=API_KEY_HERE
